2007-05-16  Stefan Kost  <ensonic@users.sf.net>

	patch by: Stanislav Brabec <sbrabec@suse.cz>

	* configure.ac:
	* ext/amrwb/Makefile.am:
	* ext/amrwb/amrwb-code/Makefile.am:
	* ext/amrwb/amrwb-code/amrwb/Makefile.am:
	* ext/amrwb/amrwb-code/amrwb/README:
	* ext/amrwb/gstamrwbdec.c:
	* ext/amrwb/gstamrwbdec.h (__GST_AMRWBDEC_H__):
	* ext/amrwb/gstamrwbenc.h (__GST_AMRWBENC_H__):
	* ext/amrwb/gstamrwbparse.c:
	* ext/amrwb/gstamrwbparse.h (__GST_AMRWBPARSE_H__):
	* gst-libs/Makefile.am:
	* gst-libs/ext/Makefile.am:
	* gst-libs/ext/amrwb/Makefile.am:
	* gst-libs/ext/amrwb/README:
	  Use external shared libamrwb. Fixes #423741 (with lots of cleanup).

2007-05-16  Stefan Kost  <ensonic@users.sf.net>

	* ext/x264/gstx264enc.c (gst_x264_enc_init_encoder):
	  This needs a version check.

	* gst/bayer/Makefile.am:
	  Fix the build.

2007-05-15  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* sys/directdraw/Makefile.am:
	* sys/directsound/Makefile.am:
	  Add DIRECTDRAW_CFLAGS and DIRECTSOUND_CFLAGS to Makefile.am; save
	  and restore the various flags in the directdraw/directsound
	  detection section. Apparently improves cross-compiling for win32
	  with mingw32 under some circumstances (#437539).

2007-05-15  Wim Taymans  <wim@fluendo.com>

	* gst/rtpmanager/gstrtpptdemux.c: (gst_rtp_pt_demux_chain):
	We always use fixed caps.

2007-05-14  David Schleef  <ds@schleef.org>

	* gst/rtpmanager/gstrtpbin.c:
	  g_hash_table_remove_all() only exists in 2.12.  Work around.

2007-05-14  David Schleef  <ds@schleef.org>

	* configure.ac:
	* gst/bayer/Makefile.am:
	* gst/bayer/gstbayer.c:
	* gst/bayer/gstbayer2rgb.c:
	  Add a Bayer-to-RGB converter.  You know you want one, uh-huh.
	  Partial fix for #314160.

2007-05-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/switch/gstswitch.c (ARG_ACTIVE_SOURCE, ARG_STOP_VALUE,
	  ARG_LAST_TS, parent_class, gst_switch_release_pad,
	  gst_switch_request_new_pad, gst_switch_chain, gst_switch_event,